--- a/styles/navbargreenr.css
+++ b/styles/navbargreenr.css
@@ -14,7 +14,7 @@ body {
     position: relative;
     justify-content: space-between;
     align-items: center;
-    background-image: linear-gradient(to top, hsla(130, 61%, 71%, 0.986), #FEC10B);
+    background-image: linear-gradient(to top, hsla(130, 61%, 71%, 0.986), #1DD73C);
     color: black;
     border-radius: 0px 0px 4px 4px;
 }
@@ -44,7 +44,7 @@ body {
 .navbar-links li a {
     display: inline-block;
     text-decoration: none;
-    color: black;
+    color: #CC142D;
 }
 
 .fa{
@@ -52,9 +52,9 @@ body {
 }
 
 .navbar-links li:hover {
-    background-image: linear-gradient(hsla(130, 61%, 71%, 0.986), #FEC10B);
-    border-radius: 0px 0px 22px 22px;
-    border: 0px double rgb(0,0,0,.2);
+    background-image: linear-gradient(to top, rgb(0,0,0,.5), #1DD73C);
+    border-radius: 0px 0px 12px 12px;
+    border: 2px double rgb(0,0,0,.2);
 }
 
 .toggle-button {
@@ -71,12 +71,12 @@ body {
 .toggle-button .bar {
     height: 3px;
     width: 100%;
-    background-color: black;
+    background-color: #CC142D;
     border-radius: 10px;
 }
 
 .toggle-button .bar:hover{
-    background-color: black;
+    background-image: linear-gradient(to top, rgb(0,0,0,.5), #1DD73C);
     border: 4px double rgb(0,0,0,.2);
 }
 
