--- a/styles/login.css
+++ b/styles/login.css
@@ -1,8 +1,5 @@
-header {
-    height: 5em;
-    width: 100%;
-    position: relative;
-    border-bottom: 1.5px solid black;
+  body {
+    height: 100vh;
   }
 
   header h1 {
@@ -17,9 +14,14 @@ header {
   }
 
   #loginBackground {
-    background-image: url(../images/sunnyCar.jpg);
+    background-color: #e8f6e8;
     background-repeat: cover;
     background-size: 100%;
     height: 100%;
-    width: 100%;
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+    border: 1px solid rgba(0, 0, 0, .2);
   }
+
+ 
