--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -14,9 +14,10 @@ body {
     position: relative;
     justify-content: space-between;
     align-items: center;
-    background-image: linear-gradient(to top, hsla(130, 61%, 71%, 0.986), #FEC10B);
     color: black;
     border-radius: 0px 0px 4px 4px;
+    background-color: #33a852;
+    background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 }
 
 .brand-title {
@@ -47,14 +48,14 @@ body {
     color: black;
 }
 
-.fa{
+.fa {
     margin: 0.75rem;
 }
 
 .navbar-links li:hover {
     background-image: linear-gradient(hsla(130, 61%, 71%, 0.986), #FEC10B);
     border-radius: 0px 0px 22px 22px;
-    border: 0px double rgb(0,0,0,.2);
+    border: 0px double rgb(0, 0, 0, .2);
 }
 
 .toggle-button {
@@ -75,9 +76,9 @@ body {
     border-radius: 10px;
 }
 
-.toggle-button .bar:hover{
+.toggle-button .bar:hover {
     background-color: black;
-    border: 4px double rgb(0,0,0,.2);
+    border: 4px double rgb(0, 0, 0, .2);
 }
 
 @media (max-width: 850px) {
@@ -113,7 +114,7 @@ body {
     }
 }
 
-#footer{
+#footer {
     display: flex;
     width: 100%;
     padding-top: 10px;
@@ -125,3 +126,42 @@ body {
     bottom: 0;
     font-size: 10pt;
 }
+
+#blackout {
+    background: rgba(102, 102, 102, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+  }
+  #box {
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    padding: 15px;
+    border: 3px solid #0000cc;
+    border-radius: 10px;
+    color: #0000cc;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background: #fff;
+  }
+  #blackout:target {display: block;}
+  .close {
+    display: inline-block;
+    border: 1px solid #0000cc;
+    color: #0000cc;
+    padding: 0 12px;
+    margin: 10px;
+    text-decoration: none;
+    background: #f2f2f2;
+    font-size: 14pt;
+    cursor:pointer;
+  }
+  .close:hover {background: #e6e6ff;}
