--- a/styles/list.css
+++ b/styles/list.css
@@ -10,39 +10,37 @@
 
 .contain1 {
     background-color: white;
-    border-radius: 5px;
     padding: 10px;
     display: flex;
     justify-content: space-between;
 }
 
-.start,
-.finish {
+#start,
+#finish {
     padding: 2px 15px;
     margin-left: 10px;
-    background: white;
     color: black;
-    height: 2em;
+    height: 3em;
+
+    background-color: cornsilk;
+    border: solid 1px grey;
+    border-radius: 3px;
 }
 
-.listOpt p{
+.listOpt p {
     text-align: center;
     font-size: 20px;
 }
 
 #list {
     display: grid;
-    grid-template-columns: 40% 30% 30%;
-    grid-gap: 20px;
+    grid-template-columns: 40% 40%;
+    grid-gap: 10%;
 }
 
 #list div {
     background-color: white;
     border: 7px solid whitesmoke;
-}
-
-#map1 {
-    grid-row: 1/3;
 }
 
 .listOpt {
@@ -60,17 +58,16 @@
     height: 30px;
 }
 
-#map1 img {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-
-}
-
 .listOpt {
     display: flex;
     border-radius: 20px;
     justify-content: space-evenly;
+}
+
+.reenter{
+    margin: 10px;
+    font-size: 25px;
+    background-color: white;
 }
 
 @media (max-width: 850px) {
@@ -78,10 +75,6 @@
         display: grid;
         grid-template-columns: 100%;
         grid-gap: 10px;
-    }
-
-    #map1 {
-        grid-row: 5/6;
     }
 
     .contain1 {
