--- a/styles/list.css
+++ b/styles/list.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Dosis');
 
-.contain1,
-.contain2 {
+.contain1{
     margin: 2% 10%;
     font-family: 'Dosis', sans-serif;
     font-weight: 700;
+}
+
+.contain2{
+    background-image: url(../images/Company-background.jpg);
+    background-repeat: repeat-y;
+    margin-bottom: 5em;
 }
 
 .reenter{
@@ -15,7 +20,7 @@
 }
 
 .background-image {
-    background-image: url(../images/listbg2.JPG);
+    background-image: url(../images/List-Page-Background.JPG);
     background-repeat: repeat-x;
     background-position: center;
     background-size: contain;
@@ -45,7 +50,7 @@
 
 .listOpt p {
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 #list {
@@ -55,8 +60,43 @@
 }
 
 #list div {
-    background-color: white;
     border: 7px solid whitesmoke;
+}
+
+#uber-color{
+    margin: 0px;
+    text-align: left;
+    background-color: blue;
+    width: 100%;
+    font-size: 12px;
+    padding: 0px;
+}
+
+#lyft-color{
+    margin: 0px;
+    text-align: left;
+    background-color: palevioletred;
+    width: 100%;
+    font-size: 12px;
+    padding: 0px;
+}
+
+#evo-color{
+    margin: 0px;
+    text-align: left;
+    background-color: palevioletred;
+    width: 100%;
+    font-size: 12px;
+    padding: 0px;
+}
+
+#modo-color{
+    margin: 0px;
+    text-align: left;
+    background-color: palevioletred;
+    width: 100%;
+    font-size: 12px;
+    padding: 0px;
 }
 
 .listOpt {
@@ -70,14 +110,23 @@
 }
 
 .listOpt p button {
-    width: 100%;
-    height: 30px;
+    width: fit-content;
 }
 
 .listOpt {
-    display: flex;
+    display: grid;
     border-radius: 20px;
+    grid-template-rows: 0.25fr 1fr 0.5fr 0.5fr 0.5fr;
+    border-color: white;
+}
+
+.end-links{
+    display: flex;
     justify-content: space-evenly;
+}
+
+.end-links a{
+    font-size: 20px;
 }
 
 @media (max-width: 850px) {
