--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -3,24 +3,97 @@
     border-radius: 50%;
     height: 100px;
     width: 100px;
+    margin: 0 auto;
+    margin-top: 1rem;
 }
 
 #mission{
     text-align: center;
-    margin: auto 10%;
-    background-color: powderblue;
+    background-color:white;
     border: 5px black solid;
     border-radius: 10px;
-    margin: 20px;
+    width: 80%;
+      margin: 0 auto;
+      margin-bottom: 2rem;
 }
 
 #concerns{
     text-align: center;
-    margin: auto 10%;
-    background-color: powderblue;
+    background-color:white;
     border: 5px black solid;
     border-radius: 10px;
-    margin: 20px;
+    width: 80%;
+      margin: 0 auto;
+      margin-bottom: 2rem;
 }
 
+header {
+    background-image: url(../images/AboutUs2.png);
+    background-size: 100% 100%;
+    height: 20rem;
+    width: 100%;
+    position: relative;
+    border-bottom: 1.5px solid black;
+    margin-bottom: 2rem;
+  }
 
+  header h1 {
+    margin: 0;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    font-size: 48pt;
+    color: black;
+  }
+
+  h2 {
+    font-size: 28pt;
+
+  }
+
+  #team{
+      text-align: center;
+      font-size: 36pt;
+  }
+
+  body{
+    background-color: #e8f6e8;
+  }
+
+  .container{
+      background-color:white;
+  }
+
+  .card-body{
+      background-color:#e8f6e8;
+      border-top: 1px solid black;
+      margin-top: 1rem;
+  }
+
+  #title1{
+      text-align: center;
+  }
+
+  #title2{
+    text-align: center;
+}
+
+#contact{
+    border-top: 1px dashed black;
+}
+
+#contactTitle{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+#contactinfo{
+    width: 80%;
+    margin: 0 auto;
+}
+
+#aboutUsTitle{
+    opacity: initial;
+}
