--- a/styles/help.css
+++ b/styles/help.css
@@ -32,6 +32,7 @@ header {
     transform: translate(-50%, -50%);
     text-shadow: 2px 2px 8px black;
     font-size: 36pt;
+    opacity: 1;
   }
 
   a{
