--- a/styles/profile.css
+++ b/styles/profile.css
@@ -3,6 +3,7 @@
     margin: auto 10%;
     font-size: 25px;
     padding: 1em;
+    text-align: center;
 }
 
 #Searches {
@@ -25,6 +26,7 @@
     border-radius: 15px;
 }
 
+/* Display below 720px of width */
 @media (max-width: 720px) {
     #profile {
         margin: auto 2%;
