--- a/styles/help.css
+++ b/styles/help.css
@@ -6,37 +6,18 @@ body {
 
 #contents{
   background-color: #e8f6e8;
-  width: 1200px;
-    max-width: 100%;
+  width: 100%;
+  height: 100%;
     margin: 0 auto;
     border: 1px solid rgba(0, 0, 0, .5);
   position: relative;
 }
 
-header {
-    background-image: url(../images/helpBackground.jpg);
-    background-repeat: stretch;
-    background-size: 460px;
-    height: 5em;
-    width: 100%;
-    position: relative;
-    border-bottom: 1.5px solid black;
-  }
-
-  header h1 {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    text-shadow: 2px 2px 8px black;
-    font-size: 36pt;
-    opacity: 1;
-  }
-
   a{
     margin: 0 auto;
+  }
+
+  a:hover{
   }
   
   a p {
@@ -45,6 +26,11 @@ header {
     font-weight: 600;
     color: #33a852;
   }
+
+  a p:hover{
+    color: black;
+  }
+
   #picFAQ {
     width: 520px;
     max-width: 100%;
