--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -1,3 +1,4 @@
+/* styles profile pictures as circles with a black border */
 .profile-pictures{
     border: 4px solid black;
     border-radius: 50%;
@@ -7,6 +8,7 @@
     margin-top: 1rem;
 }
 
+/* set layout and styles for mission section.*/
 #mission{
     text-align: center;
     background-color:white;
@@ -17,6 +19,7 @@
       margin-bottom: 2rem;
 }
 
+/* set layout and styles for safety concerns section.*/
 #concerns{
     text-align: center;
     background-color:white;
@@ -27,16 +30,18 @@
       margin-bottom: 2rem;
 }
 
+/* set layout and styles for header image.*/
 header {
     background-image: url(../images/AboutUs2.png);
     background-size: 100% 100%;
-    height: 20rem;
+    height: 14rem;
     width: 100%;
     position: relative;
     border-bottom: 1.5px solid black;
     margin-bottom: 2rem;
   }
 
+/* centers and sets styles for the title of the page.*/
   header h1 {
     margin: 0;
     position: absolute;
@@ -48,52 +53,51 @@ header {
     color: black;
   }
 
+  /* set font size for secondary headers.*/
   h2 {
     font-size: 28pt;
 
   }
 
+  /* centers and sets font size for our team section.*/
   #team{
       text-align: center;
       font-size: 36pt;
   }
-
+/* sets the background color */
   body{
     background-color: #e8f6e8;
   }
-
+/* sets the background color for our team section. */
   .container{
       background-color:white;
   }
-
+/* sets the background color for each member of the team. */
   .card-body{
       background-color:#e8f6e8;
       border-top: 1px solid black;
       margin-top: 1rem;
   }
 
+  /* centers member's name */
   #title1{
       text-align: center;
   }
-
+/* centers member's name */
   #title2{
     text-align: center;
 }
-
+/* create a border at top of Contact Us section */
 #contact{
     border-top: 1px dashed black;
 }
-
+/* centers Contact us header */
 #contactTitle{
     text-align: center;
     margin-bottom: 1rem;
 }
-
+/* sets with of contact info */
 #contactinfo{
     width: 80%;
     margin: 0 auto;
-}
-
-#aboutUsTitle{
-    opacity: initial;
 }
