--- a/styles/main.css
+++ b/styles/main.css
@@ -131,9 +131,10 @@ h1 {
     height: 4.5rem;
     margin: 0 auto;
     padding: 10px 10px;
-    font-size: 18pt;
+    font-size: 25pt;
     /* border-radius:0; */
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto;
+    font-weight: bold;
     word-spacing: .4em;
     font-weight: 220;
     transform: translate(0, -40%);
@@ -152,6 +153,12 @@ a {
 
 
 @media (max-width:600px){
+    .btn-xl{
+        font-size: 20pt;
+    }
+}
+
+@media (max-width:450px){
     .btn-xl{
         font-size: 14pt;
     }
