--- a/styles/login.css
+++ b/styles/login.css
@@ -18,8 +18,7 @@
     background-repeat: cover;
     background-size: 100%;
     height: 100%;
-    width: 1200px;
-    max-width: 100%;
+    width: 100%;
     margin: 0 auto;
     border: 1px solid rgba(0, 0, 0, .2);
   }
