--- a/styles/main.css
+++ b/styles/main.css
@@ -11,11 +11,12 @@
     border: 5px double grey;
 }
 
+/* sets font size of the output */
 #output {
     font-size: 11px;
 }
 
-/* Optional: Makes the sample page fill the window. */
+/* Makes the page fill the window. */
 html,
 body {
     height: 100%;
@@ -24,12 +25,13 @@ body {
     background-color: #e8f6e8;
 }
 
+/* sets header height and position */
 #header {
     height: 8%;
     position: relative;
-
 }
 
+/* sets the layout and style of the header text */
 h1 {
     margin: 0;
     position: absolute;
@@ -47,15 +49,18 @@ h1 {
     color: #FEC10B;
 }
 
+/* sets width and margin of the elements */
 #elements {
     width: 20%;
     margin-right: 20px;
 }
 
+/* makes sure the distance calculation result is hidden */
 #hiddenCalcDistance {
     display: none;
 }
 
+/* sets the style and layout of the controls of the map */
 .controls {
     margin-bottom: 15px;
     margin-top: 10px;
@@ -69,7 +74,7 @@ h1 {
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
-
+/* sets the layout and style of the location inputs used with the map */
 #origin-input,
 #destination-input {
     background-color: white;
@@ -85,6 +90,7 @@ h1 {
     border: 3px solid rgb(206, 206, 206);
 }
 
+/* sets placeholder color to grey */
 ::placeholder {
     /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: grey;
@@ -92,21 +98,25 @@ h1 {
     /* Firefox */
 }
 
+/* sets placeholder color to grey */
 :-ms-input-placeholder {
     /* Internet Explorer 10-11 */
     color: grey;
 }
 
+/* sets placeholder color to grey */
 ::-ms-input-placeholder {
     /* Microsoft Edge */
     color: grey;
 }
 
+/* changes the border color of the location inputs when focused */
 #origin-input:focus,
 #destination-input:focus {
     border-color: #33a852;
 }
 
+/* sets style of mode selector (walk, car, transit).  Currently display is set to none */
 #mode-selector {
     display: none;
     color: #fff;
@@ -115,18 +125,22 @@ h1 {
     padding: 5px 11px 0px 11px;
 }
 
+/* sets cursor to pointer for logout button*/
 #btnLogout {
     cursor: pointer;
 }
 
+/* sets the distance calculation display to none */
 #dist {
     display: none;
 }
 
+/* sets the duration calculation display to none */
 #dura {
     display: none;
 }
 
+/* sets style and layout of the 'Get Estimate' button */
 .btn-xl {
     width: 100%;
     height: 5rem;
@@ -143,24 +157,30 @@ h1 {
     background-color: green;
 }
 
+/* changes background color of the 'Get Estimate' button when hovered over */
 .btn-xl:hover{
     background-color: #78d390;
 }
 
+/* changes anchor elements to block display */
 a {
     display: block;
 }
 
-
+ /* mediaquery for when max width is 720px */
 @media (max-width:720px){
+    
+    /* reduces size of button text for 'Get Estimate' */
     .btn-xl{
         font-size: 20pt;
         font-weight: 400;
         width: fit-content;
     }
 }
-
+ /* mediaquery for when max width is 520px */
 @media (max-width:520px){
+
+    /* reduces size of button text for 'Get Estimate' */
     .btn-xl{
         font-size: 12pt;
         font-weight: 100;
