--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,14 +1,18 @@
+/* imports fonts */
 @import url('https://fonts.googleapis.com/css?family=Monoton');
 
+/* sets all box sizing to border-box */
 * {
     box-sizing: border-box;
 }
 
+/* makes page fill screen */
 body {
     margin: 0;
     padding: 0;
 }
 
+/* sets layout and style for the top navbar */
 .navbar {
     display: flex;
     position: relative;
@@ -22,6 +26,7 @@ body {
     border: 1px solid rgba(0, 0, 0, .5);
 }
 
+/* sets the letter style of 'BESTRIDE' Name on navbar */
 .brand-title {
     font-size: 2.7rem;
     margin: .5rem;
@@ -31,38 +36,46 @@ body {
     text-decoration: none;
 }
 
+/* sets the height of links in the navbar to 100% */
 .navbar-links {
     height: 100%;
 }
 
+/* sets layout of the individual links in the navbar */
 .navbar-links ul {
     display: flex;
     margin: 0 2vw;
     padding: 0;
 }
 
+/* changes the background, adds a border, and changes the cursor to pointer when hovering the logout button */
 #btnLogout:hover{
     background-image: linear-gradient(rgba(25, 102, 38, 0.986), #33a852);
     border-radius: 0px 0px 15px 15px;
     border: 0px double rgb(0, 0, 0, .2);
     cursor: pointer;
 }
+
+/* styles the individual links in the navbars, sets margins, and sets list-style to none */
 .navbar-links li {
     font-size: 1.25rem;
     list-style: none;
     margin: 1vw;
 }
 
+/* sets the color and display of the anchor elements of the links for the navbar */
 .navbar-links li a {
     display: inline-block;
     text-decoration: none;
     color: black;
 }
 
+/* sets margins on the icons used in the navbar */
 .fa {
     margin: 0.75rem;
 }
 
+/* changes the background, border, and cursor when hovering links in the navbar */
 .navbar-links li:hover {
     background-image: linear-gradient(rgba(25, 102, 38, 0.986), #33a852);
     border-radius: 0px 0px 15px 15px;
@@ -70,6 +83,7 @@ body {
     cursor: pointer;
 }
 
+/* sets position and layout of the navbar toggle menu (on the right side of the navbar) */
 .toggle-button {
     position: absolute;
     top: 2rem;
@@ -81,6 +95,7 @@ body {
     height: 30px;
 }
 
+/* sets the style of the bars used as a toggle button */
 .toggle-button .bar {
     height: 4px;
     width: 100%;
@@ -88,38 +103,46 @@ body {
     border-radius: 10px;
 }
 
+/* sets a border around the toggle button when hovered */
 .toggle-button:hover {
     border: 4px double rgb(0, 0, 0, .2);
 }
 
+/* mediaquery for when max width is 880px */
 @media (max-width: 880px) {
+    /* changes flex direction to column and aligns items to flex start */
     .navbar {
         flex-direction: column;
         align-items: flex-start;
     }
-
+/* changes the toggle button display to flex */
     .toggle-button {
         display: flex;
     }
 
+    /* changes it so that the links are not displayed */
     .navbar-links {
         display: none;
         width: 100%;
     }
 
+    /* changes links flex direction to column */
     .navbar-links ul {
         width: 100%;
         flex-direction: column;
     }
 
+    /* centers the text of the navbar links */
     .navbar-links ul li {
         text-align: center;
     }
 
+    /* changes the padding of the anchor elements of the links */
     .navbar-links ul li a {
         padding: .5rem 1rem;
     }
 
+    /* changes the display of the navbar links to flex (no longer hidden as well) when active */
     .navbar-links.active {
         display: flex;
     }
@@ -133,43 +156,51 @@ body {
         color: white;
         letter-spacing: 3px;
     }
-
+/* sets top for toggle button */
     .toggle-button {
         top: 1.5rem;
     }
 
+    /* changes flex direction to column and aligns items to flex start */
     .navbar {
         flex-direction: column;
         align-items: flex-start;
     }
 
+    /* changes the toggle button display to flex */
     .toggle-button {
         display: flex;
     }
 
+    /* changes it so that the links are not displayed */
     .navbar-links {
         display: none;
         width: 100%;
     }
 
+    /* changes links flex direction to column */
     .navbar-links ul {
         width: 100%;
         flex-direction: column;
     }
 
+    /* centers the text of the navbar links */
     .navbar-links ul li {
         text-align: center;
     }
 
+    /* changes the padding of the anchor elements of the links */
     .navbar-links ul li a {
         padding: .5rem 1rem;
     }
 
+    /* changes the display of the navbar links to flex (no longer hidden as well) when active */
     .navbar-links.active {
         display: flex;
     }
 }
 
+/* sets the style and layout of the footer */
 #footer {
     display: flex;
     width: 100%;
@@ -185,6 +216,7 @@ body {
     font-size: 10pt;
 }
 
+/* sets the background and position while also setting display to none */
 #blackout {
     background: rgba(102, 102, 102, 0.5);
     width: 100%;
@@ -195,6 +227,7 @@ body {
     display: none;
 }
 
+/* sets the style and layout of the box */
 #box {
     width: 300px;
     height: 50px;
@@ -212,10 +245,12 @@ body {
     background: #fff;
 }
 
+/* changes the display to block when targeted */
 #blackout:target {
     display: block;
 }
 
+/* sets the display, color, and font style */
 .close {
     display: inline-block;
     border: 1px solid #0000cc;
@@ -228,6 +263,7 @@ body {
     cursor: pointer;
 }
 
+/* changes background when hovered */
 .close:hover {
     background: #e6e6ff;
 }
